--- a/server/makefile
+++ b/server/makefile
@@ -1,8 +1,9 @@
 .PHONY: all clean
 CFLAGS = -Wall -g -O2
 targets = serv
-sources = epoll_ser.cpp MyDb.h epoll_ser.h ThreadPool.h
-objects = epoll_ser.o
+sources = epoll_ser.cpp ErrorCode.cpp Logger.cpp
+headers = epoll_ser.h ErrorCode.h Logger.h MyDb.h 
+objects = epoll_ser.o ErrorCode.o Logger.o
 
 link=-lpthread `mysql_config --cflags --libs` -lcrypt
 all: $(targets)
@@ -11,9 +12,14 @@ all: $(targets)
 $(targets): $(objects)
 	g++ $(CFLAGS) $(objects) -o $@ $(link)
 
-%.o: %.cpp %.h
+epoll_ser.o: epoll_ser.cpp $(headers)
 	g++ $(CFLAGS) -c $< -o $@ $(link)
 
+ErrorCode.o: ErrorCode.cpp ErrorCode.h
+	g++ $(CFLAGS) -c $< -o $@ $(link)
+
+Logger.o: Logger.cpp Logger.h ErrorCode.h
+	g++ $(CFLAGS) -c $< -o $@ $(link)
 
 clean:
-	rm -f *.o  $(targets) $(obj)
+	rm -f *.o $(targets)
